[tool.poetry]
name = "adult-tube"
version = "0.1.0"
description = ""
authors = ["Dawid Dutkiewicz <dawid.dutkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
isort = "^5.0.9"
mypy = "^0.782"
black = "^19.10b0"

[tool.black]
line-length = 120


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
