[tool.poetry]
name = "video-tube"
version = "0.1.0"
description = "A clone of popular video tube sites."
authors = ["Dawid Dutkiewicz <dawid.dutkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
isort = "^5.0.9"
mypy = "^0.782"
black = "^19.10b0"
flake8 = "^3.8.3"
responses = "^0.10.15"

[tool.black]
line-length = 120


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
